Security using custom authentication and authorization